--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "author": "Nzhdeh Barseghyan",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.395.0",
+    "@aws-sdk/client-sns": "^3.395.0",
+    "@aws-sdk/lib-storage": "^3.395.0",
     "aws-sdk": "^2.1420.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
