--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -20,7 +20,6 @@
     "@aws-sdk/client-s3": "^3.395.0",
     "@aws-sdk/client-sns": "^3.395.0",
     "@aws-sdk/lib-storage": "^3.395.0",
-    "aws-sdk": "^2.1420.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
